# dbt_example

./: .gitignore  .gitlab-ci.yml  Context.md  Context_Cursor.md  Dockerfile  README.md  _lib3.py  _library.py  dbt_project_guide.md  gitlab_instruction.md  library  local_prefect_instruction.md  prefect.yaml  pyproject.toml  read_email copy.ipynb  test.ipynb  tevi_creator_activity_segment.ipynb
bqr_sql_script/: bqr_query_to_df.sql  ops_fact__daily_follower_following_v2.sql  ops_sys__creator_payout_block.sql
dbt_modeling/: dbt_project.yml  profiles.yml
dbt_modeling/macros/: test_macros.sql
dbt_modeling/models/bqr/: bd_fact__star_purchase.sql  ops_fact__pay_user_master_data.sql  ops_sub__monthly_pay_user.sql  ops_sub__monthly_pay_user_segmentation.sql  ops_sub__pay_user_flagging.sql
dbt_modeling/tests/: col1_has_null_in_test_1.sql
flows/: block_payout.py  bqr_dbt_data_flow.py  bqr_to_clickhouse.py  partitioning_table.py  test_partition_table.py  tevi_data_dbt.py
flows/other_lib/: _library.py  google_cloud_platform.py  google_cloud_storage.py
personal_code/: auth_and_token.py  google_bqr.py  google_file.py  google_mail.py  google_vpc.py  inititation.py  utility_lib.py
python_library/: clickhouse_lib.py  dbt_lib.py  google_lib.py  prefect_lib.py  telegram_lib.py  utility_lib.py
tevi_analytics/: .user.yml  dbt_project.yml  profiles.yml
tevi_analytics/models/: authentication_user.yml  example.sql  list_databases.sql  user_summary.sql  user_summary.yml
tevi_data_team_dbt/: .user.yml
tevi_data_team_dbt/macros/: mv__ops_fact__tvs_transaction.sql
(+13 files in other folders)
